--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body class="grid grid-middle">
 
-  <header class="unit text-center pad-b-1-2 pad-t-1-2 masthead">
-    <h1 class="logo push-1-2 pad-t-1-2 xs-1 s-1 m-1 l-1-3-4">Potion Express</h1>
+  <header class="unit text-center pad-b-1-2 pad-t-2 masthead">
+    <h1 class="logo push-1-2 pad-b-1-2 xs-1 s-1 m-1 l-1-3-4">Potion Express</h1>
 
     <nav class="nav unit xs-1 s-1 m-1 l-1-3-4">
       <ul class="list-group-inline push-0">
-        <li class="pad-b-1-2 push-1-2 island-1-4 card gutter text-center block">
+        <li class="pad-b-1-2 push-1-4 island-1-4 card gutter text-center block">
           <a class="inline-block" href="#">
             <i class="icon i-32 push-1-8">
               <img class="" src="images/placeholder-triangle.svg" alt="">
@@ -26,7 +26,7 @@
           </a>
         </li>
 
-        <li class="push-1-2 card island-1-4 gutter text-center block">
+        <li class="push-1-4 card island-1-4 gutter text-center block">
           <a class="inline-block" href="url">
             <i class="icon i-32 push-1-8">
               <img class="" src="images/placeholder-triangle.svg" alt="">
