--- a/index.html
+++ b/index.html
@@ -12,49 +12,51 @@
 </head>
 <body class="grid grid-middle">
 
-  <header class="unit text-center pad-b-1-2 pad-t-2 masthead">
-    <h1 class="logo push-1-2 pad-b-1-2 xs-1 s-1 m-1 l-1-3-4">Potion Express</h1>
+  <header class="unit text-center pad-b-1-2 pad-t-1-2 masthead island-1-2">
+    <div class="grid grid-middle">
+      <h1 class="unit logo push-1-2 pad-b-1-2 pad-t-1-2 xs-1 s-1 m-2 l-1-4 ">Potion Express</h1>
 
-    <nav class="nav unit xs-1 s-1 m-1 l-1-3-4">
-      <ul class="list-group-inline push-0">
-        <li class="pad-b-1-2 push-1-4 island-1-4 card gutter text-center block">
-          <a class="inline-block" href="#">
-            <i class="icon i-32 push-1-8">
-              <img class="" src="images/placeholder-triangle.svg" alt="">
-            </i>
-            <span class="milli block">Unicorn Tears</span>
-          </a>
-        </li>
+      <nav class="nav unit xs-1 s-1 m-2 l-3-4">
+        <ul class="list-group-inline push-0 pad-t-1-2">
+          <li class="pad-b-1-2 push-1-4 island-1-4 card gutter text-center block">
+            <a class="inline-block" href="#">
+              <i class="icon i-32 push-1-8">
+                <img class="" src="images/placeholder-triangle.svg" alt="">
+              </i>
+              <span class="milli block">Unicorn Tears</span>
+            </a>
+          </li>
 
-        <li class="push-1-4 card island-1-4 gutter text-center block">
-          <a class="inline-block" href="url">
-            <i class="icon i-32 push-1-8">
-              <img class="" src="images/placeholder-triangle.svg" alt="">
-            </i>
-            <span class="milli block">Dragon Scales</span>
-          </a>
-        </li>
+          <li class="push-1-4 card island-1-4 gutter text-center block">
+            <a class="inline-block" href="url">
+              <i class="icon i-32 push-1-8">
+                <img class="" src="images/placeholder-triangle.svg" alt="">
+              </i>
+              <span class="milli block">Dragon Scales</span>
+            </a>
+          </li>
 
-        <li class="card island-1-4 gutter text-center block">
-          <a href="" class="inline-block">
-            <i class="icon i-32 push-1-8">
-              <img class="" src="images/placeholder-triangle.svg" alt="">
-            </i>
-            <span class="milli block">Yeti Dandruff</span>
-          </a>
-        </li>
+          <li class="card island-1-4 gutter text-center block">
+            <a href="" class="inline-block">
+              <i class="icon i-32 push-1-8">
+                <img class="" src="images/placeholder-triangle.svg" alt="">
+              </i>
+              <span class="milli block">Yeti Dandruff</span>
+            </a>
+          </li>
 
-        <li class="card island-1-4 gutter text-center block">
-          <a class="inline-block" href="url">
-            <i class="icon i-32 push-1-8">
-              <img class="" src="images/placeholder-triangle.svg" alt="">
-            </i>
-            <span class="milli block">Pixie Dust</span>
-          </a>
-        </li>
+          <li class="card island-1-4 gutter text-center block">
+            <a class="inline-block" href="url">
+              <i class="icon i-32 push-1-8">
+                <img class="" src="images/placeholder-triangle.svg" alt="">
+              </i>
+              <span class="milli block">Pixie Dust</span>
+            </a>
+          </li>
 
-      </ul>
-    </nav>
+        </ul>
+      </nav>
+    </div>
 
   </header>
 
